* Tue May 08 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.0.6-0
- Add `order => 'numeric'` setting to concat for rsyncd.conf
- Add support for Puppet 5
- Add support for and OEL

* Mon Feb 12 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.5-0
- Update upperbound on puppetlabs/concat version to < 5.0.0

* Fri Aug 18 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Update concat version in metadata.json & build/rpm_metadata/requires

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.3-0
- Update puppet dependency in metadata.json

* Wed Mar 29 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.2-0
- Ensure that rsync password files are not echoed to the Puppet log

* Thu Mar 17 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Remove OBE 'pe' requirement from metadata.json
- Update puppet version in .travis.yaml

* Wed Mar 8 2017 Dylan Cochran <heliocentric@gmail.com> - 6.0.1-0
- Wire down rsync's beaker acceptance tests

* Fri Feb 10 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Fixed minor bug in rsync provider that caused  'Unknown failure
  using insync_values?' Puppet message to be generated.

* Sun Jan 22 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Switched to using puppetlabs/concat
- Fixed the startup script for EL6
- Fixed minor ordering issues
- Renamed the service to 'rsyncd' to match the service name in EL7
- Cleaned up rsyslog calls to remove logic

* Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated to use new pki scheme.

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.0-0
- Minor cleanup

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Thu Jul 07 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.2.2-0
- Updated the client_nets parameters to pull from global prior to using Hiera
  and to fall back to the safety of 127.0.0.1.
