@@ -1,3 +1,6 @@
+* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.7-0
+- Drop Hiera 4 support
+
 * Tue May 08 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.0.6-0
 - Add `order => 'numeric'` setting to concat for rsyncd.conf
 - Add support for Puppet 5
